Container à 320px, reste à fixer le header align-items+ about

--- a/styles.scss
+++ b/styles.scss
@@ -927,7 +927,7 @@ footer {
         font-size: 16px;
       }
       .container, #Events{
-          width: 330px;
+          width: 320px;
       }
       .eventCardContainer img, .eventCardSmall img{
           width: 100px;
@@ -975,7 +975,7 @@ footer {
       #about .container {
         #slogan,
         #aboutContent {
-        width: 330px;
+        width: 320px;
         #ContactInfo > div{
             font-size: 11px;
         }
